# flm-citations

./: .gitignore  README.md  flmconfig.yaml  llmconfig.yaml  pyproject.toml
flm_citations/: feature.py
llm_citations/: __init__.py  feature.py  feature_cite.py  llmcitationsscanner.py
llm_citations/citesources/: arxiv.py  base.py  bibliographyfile.py  doi.py  manual.py
playground/: bibpreset.yaml  c1.yaml  c2.yaml  feature-1.yaml  feature-2.yaml  flmconfig.yaml  llmconfig.yaml  mydoc.flm  mydoc.llm  otherdoc.flm  otherdoc.llm
playground/playground2/: mydoc2.flm  mydoc2.llm
